style.css
body {
    background-color: #EDEDED;
    color: #34363c;
    font-family: 'Merriweather', sans-serif;
    font-style: italic;
    text-align: center;
}

h1 { 
    font-size: 60px;
    line-height: 30px;
}

.center-div {
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 400px;
    height: 500px;
}

img {
    position: relative;
    width: 250px;
    height: 250px;
    border-radius:50%; 
    overflow: hidden;
}

.icons {
    letter-spacing: 20px;
}

a {
    text-decoration: none;
}

a:link {
    color: #34363c;
}
a:visited {
    color: #34363c;
}

.mail:hover {
    color: #3A6CE8;
}

.github:hover {
    color: #4DAFFF;
}

.linkedin:hover {
    color: #3AC8E8;
}

/*
a:hover {
    color: #006A6B;
}*/

